--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,47 @@ a {
     background: black;
   }
 }
+
+.container {
+  display: flex;
+  justify-content: flex-start;
+  background-color: white;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container header {
+  background-color: rgb(79, 22, 91);
+  width: 100%;
+  height: 8vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container header > div {
+  width: 100%;
+  max-width: 1480px;
+  padding: 0px 20px;
+}
+
+.container header > div h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: white;
+}
+
+.container main {
+  width: 100%;
+  max-width: 1480px;
+  justify-content: center;
+  display: flex;
+  padding-top: 50px;
+  padding: 0px 20px;
+}
+
+.container main h2 {
+  font-size: 2rem;
+  font-weight: 500;
+}
