--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,6 +59,7 @@ a {
   max-width: 1480px;
   justify-content: center;
   display: flex;
+  flex-direction: column;
   padding-top: 50px;
   padding: 0px 20px;
 }
@@ -66,11 +67,41 @@ a {
 .container main h2 {
   font-size: 2rem;
   font-weight: 500;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .container main h3 {
   font-size: 1.5rem;
   font-weight: 500;
   margin-top: 50px;
+}
+
+.container main a {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 150px;
+  padding: 15px 25px;
+  background-color: rgb(124, 2, 150);
+  width: fit-content;
+  color: white;
+}
+
+.container main form {
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+}
+
+.container main label {
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+.container main input {
+  border-radius: 5px;
+  height: 45px;
+  border: 1px solid rgb(124, 2, 150);
 }
