--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,18 @@ a {
   height: 45px;
   border: 1px solid rgb(124, 2, 150);
 }
+
+.container main button {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 50px;
+  padding: 15px 25px;
+  background-color: rgb(124, 2, 150);
+  width: fit-content;
+  color: white;
+  border: none;
+}
+
+.container main button:hover {
+  cursor: pointer;
+}
